crates/tree-sitter-djot-custom/test/corpus/syntax.txt
===============================================================================
Paragraph: simple
===============================================================================
aaa

-------------------------------------------------------------------------------

(document
  (block
    (paragraph
      (inline
        (str)))))

===============================================================================
Paragraph: multiple paragraphs
===============================================================================
aaa

bbb

-------------------------------------------------------------------------------

(document
  (block
    (paragraph
      (inline
        (str))))
  (block
    (blankline))
  (block
    (paragraph
      (inline
        (str)))))

===============================================================================
Paragraph: multiple paragraphs with leading spaces
===============================================================================
   aaa
      bbb

-------------------------------------------------------------------------------

(document
  (block
    (paragraph
      (inline
        (str))
      (inline
        (softbreak))
      (inline
        (str)))))

===============================================================================
Heading: simple
===============================================================================
# a

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str)))))

===============================================================================
Heading: multiple headings
===============================================================================
# a

# b

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str)))
    (block
      (blankline)))
  (section
    (heading
      (heading_marker)
      (inline
        (str)))))

===============================================================================
Heading: multiline headings using softbreak
===============================================================================
# a
 jjj

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str))
      (inline
        (softbreak))
      (inline
        (str)))))

===============================================================================
Heading: multiline headings using markers
===============================================================================
# a
# jjj

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str))
      (inline
        (softbreak))
      (heading_marker)
      (inline
        (str)))))

===============================================================================
Heading: multiline headings using softbreak and markers
===============================================================================
# a
 jj
# jjj

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str))
      (inline
        (softbreak))
      (inline
        (str))
      (inline
        (softbreak))
      (heading_marker)
      (inline
        (str)))))

===============================================================================
Heading: simple with hash as content
===============================================================================
# # a

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str)))))

===============================================================================
Heading: a long long marker
===============================================================================
################### a

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str)))))

===============================================================================
Heading: non-heading without spaces
===============================================================================
###################a

-------------------------------------------------------------------------------

(document
  (block
    (paragraph
      (inline
        (str)))))

===============================================================================
Heading: multiline heading with hash as content
===============================================================================
# # a
# # a

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str))
      (inline
        (softbreak))
      (heading_marker)
      (inline
        (str)))))

===============================================================================
Heading: Empty heading
===============================================================================
#

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker))))

===============================================================================
Section: Nested section
===============================================================================
# a

## a

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str)))
    (block
      (blankline))
    (section
      (heading
        (heading_marker)
        (inline
          (str))))))

===============================================================================
Section: Nested section without blankline
===============================================================================
# a
## a

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str)))
    (section
      (heading
        (heading_marker)
        (inline
          (str))))))

===============================================================================
Section: Nested section with empty heading
===============================================================================
#
## a

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker))
    (section
      (heading
        (heading_marker)
        (inline
          (str))))))

===============================================================================
Section: Multiple nested sections
===============================================================================
# a

## a

# b

## bb

### bbb

-------------------------------------------------------------------------------

(document
  (section
    (heading
      (heading_marker)
      (inline
        (str)))
    (block
      (blankline))
    (section
      (heading
        (heading_marker)
        (inline
          (str)))
      (block
        (blankline))))
  (section
    (heading
      (heading_marker)
      (inline
        (str)))
    (block
      (blankline))
    (section
      (heading
        (heading_marker)
        (inline
          (str)))
      (block
        (blankline))
      (section
        (heading
          (heading_marker)
          (inline
            (str)))))))
